--- a/TODO.org
+++ b/TODO.org
@@ -7,7 +7,8 @@
   CLOSED: [2018-07-10 Tue 16:14]
 
 
-* TODO Reuse the buffer
+* DONE Reuse the buffer
+  CLOSED: [2018-07-13 Fri 01:18]
 
 * TODO Proper meteo-pl mode with key bindings
 
